2009-09-22 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* threadpool.c: actually use the minimum number of 'completion ports'
	(for us is just a potential worker thread).

2009-09-22 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* threadpool.c: remove ares_htable. It does not make sense any more
	since the same objects are now stored in GC-tracked arrays while they are
	in the queue.

2009-09-22 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* threadpool.c: increase the minimum length of the queues to 128.
	Remove warning.

2009-09-21  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_marshal_get_string_ctor_signature): New internal function to
	return the modified signature used by string ctors.

2009-09-20  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_marshal_get_runtime_invoke_dynamic): New internal function
	to return a runtime-invoke wrapper which uses DYN_CALL to call the wrapped
	method, to be used by full-aot.

2009-09-18  Rodrigo Kumpera  <rkumpera@novell.com>

	Since the runtime supports lazy initialization of a type's vtable and this can cause a type
	to fail, we need to ensure that the vtable is properly initialized at spots were the type must
	be known to be good.

	* class.c (mono_class_init): Fail array types if their element type fails initialization
	as well.

	* object.c (mono_class_create_runtime_vtable): Fail array types if their element type fails
	initialization, additionally we request the element_type vtable to be initialized as well.

	This is fine and should not increase the working set in any meaningful way since it's reasonable
	to assume	that most code will create an array and eventually populate it, which will require the
	type's vtable to be initialized.

	* loader.c (field_from_memberref): Add a comment for a possibly useless mono_class_init call.

2009-09-17  Atsushi Enomoto  <atsushi@ximian.com>

	* normalization-tables.h : regenerated.

2009-09-16  Zoltan Varga  <vargaz@gmail.com>
